<resources>
    <string name="app_name">SignUpForm</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username:</string>
    <string name="submit">Submit</string>
    <string name="hint">Please enter your username</string>
    <string name="password">Password:</string>
    <string name="password_entry">Please enter your password</string>
    <string name="confirm">Confirm:</string>
    <string name="confirm_entry">Please confirm your password</string>
    <string name="random">Random</string>
    <string name="from_VCS">from VCS testing</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="welcome_format">Welcome, %1$s!</string>
</resources>
